--- a/src/component/YoutubeComponent/YoutubeComponent.css
+++ b/src/component/YoutubeComponent/YoutubeComponent.css
@@ -1,22 +1,22 @@
-.youtube-wrapper{
+.youtube-wrapper {
     display: inline-block;
     width: 210px;
     box-sizing: border-box;
     margin-right: 12px;
-}
-
-.img-thumb{
+  }
+  
+  .img-thumb {
     width: 100%;
     height: 118px;
     overflow: hidden;
     position: relative;
-}
-
-.img-thumb img {
+  }
+  
+  .img-thumb img {
     width: 100%;
-}
-
-p.time {
+  }
+  
+  p.time {
     position: absolute;
     color: white;
     bottom: 6px;
@@ -27,13 +27,19 @@ p.time {
     border-radius: 4px;
     font-size: 12px;
     font-weight: 500;
-}
-
-p.title{
-    font-size: 14;
+  }
+  
+  p.title {
+    font-size: 14px;
     font-weight: 600;
     text-transform: capitalize;
-    margin: 0;
+    margin: 0px;
     margin-top: 10px;
     color: #2d2d2d;
-}
+  }
+  
+  p.desc {
+    font-size: 12px;
+    color: #999;
+    margin: 0px;
+  }
